接口配置完成
