# Backend/example-app/example_app/app_routers/routes.py
@@ -1,16 +1,0 @@
-# -*- coding: utf-8 -*-
-
-###
-### DO NOT CHANGE THIS FILE
-### 
-### The code is auto generated, your change will be overwritten by 
-### code generating.
-###
-from __future__ import absolute_import
-
-from .api.user import User
-
-
-routes = [
-    dict(resource=User, urls=['/user'], endpoint='user'),
-]
